<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7F4F4F4"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/cricket_quiz"
        android:textColor="#888888"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/quiz"
                android:textColor="#3b6978"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/questOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/text_background"
                android:hint="@string/answer_here"
                android:maxLength="10"
                android:inputType="number"
                android:padding="16dp"
                android:textColor="#8E000000" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/question_2"
                android:textColor="#3b6978"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/cbShikar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:padding="10dp"
                android:text="@string/shikar_dhawan"
                android:textColor="#8E000000"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/cbSharma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:padding="10dp"
                android:text="@string/rohit_sharma"
                android:textColor="#8E000000"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/cbKholi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:padding="10dp"
                android:text="@string/virat_kholi"
                android:textColor="#8E000000"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/cbDev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:padding="10dp"
                android:text="@string/kapil_dev"
                android:textColor="#8E000000"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/question_3"
                android:textColor="#3b6978"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/questThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/text_background"
                android:hint="@string/answer_here"
                android:padding="16dp"
                android:maxLength="20"
                android:textColor="#8E000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/question_4"
                android:textColor="#3b6978"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/groupRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <RadioButton
                    android:id="@+id/tenOvers"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/_10_overs"
                    android:textColor="#8E000000"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/twentyOvers"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_20_overs"
                    android:textColor="#8E000000"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/unlimitedOvers"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/unlimited_overs"
                    android:textColor="#8E000000"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/fiftyOvers"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_50_overs"
                    android:textColor="#8E000000"
                    android:textSize="18sp" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/question_5"
                android:textColor="#3b6978"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/questFive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/text_background"
                android:hint="@string/answer_here"
                android:padding="16dp"
                android:maxLength="20"
                android:textColor="#8E000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/question_6"
                android:textColor="#3b6978"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/questSix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/text_background"
                android:hint="@string/answer_here"
                android:padding="16dp"
                android:maxLength="20"
                android:textColor="#8E000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/question_7"
                android:textColor="#3b6978"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/questSeven"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/text_background"
                android:hint="@string/answer_here"
                android:padding="16dp"
                android:maxLength="20"
                android:textColor="#8E000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/question_8"
                android:textColor="#3b6978"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/questEight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/text_background"
                android:hint="@string/answer_here"
                android:padding="16dp"
                android:maxLength="20"
                android:textColor="#8E000000" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="#4CAF50"
                android:text="@string/submit"
                android:textColor="#FFF"
                android:textSize="20sp"

                />


        </LinearLayout>

    </ScrollView>


</LinearLayout>